--- a/src/pug/partials/blog.pug
+++ b/src/pug/partials/blog.pug
@@ -21,7 +21,7 @@
                     .title__section
                         h2.title__green Blog tag
                     .category__tag
-                        each tag in ['Cây văn phòng','Cây phát lộc','Cây xanh','Cây trang trí','Cây','Plants','Sức khỏe','Quà tặng','Lưu niệm']
+                        each tag in ['Cây văn phòng','Cây phát lộc','Cây xanh','Cây trang trí','Cây','Plants','Sức khỏe','Qùa tặng','Lưu niệm']
                             +blog-tag(tag)
             .has-sidebar__content
                 block blog
