--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -32,4 +32,11 @@
         margin-bottom: 70px;
         text-transform: uppercase;
     }
+    &__small {
+        font-size: 18px;
+        text-transform: uppercase;
+        font-weight: 700;
+        color: #363533;
+        margin-bottom: 30px;
+    }
 }
