--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -48,3 +48,5 @@
 @import "./pages/PageCart/pageCart";
 //PageBlog
 @import "./pages/pageBlog/pageBlog";
+//PageBlog
+@import "./pages/pageBlogDetails/blog-details";
