--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -591,7 +591,7 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
   font-size: 18px;
   font-weight: 700;
   color: #59b586;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
   text-transform: uppercase;
 }
 
@@ -1143,6 +1143,51 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
   color: #fff;
   background-color: #59b586;
   border: 1px solid #59b586;
+}
+
+.form__group {
+  margin: 0 20px 20px 0;
+}
+
+.form__group label {
+  font-size: 12px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form__group label .required {
+  color: #ed1c24;
+  font-size: 14px;
+  padding-left: 2px;
+}
+
+.checkbox {
+  margin-top: 20px;
+  outline: none;
+}
+
+.checkbox a {
+  font-size: 12px;
+  font-style: italic;
+  color: #898989;
+  border-bottom: 1px solid currentColor;
+  margin-left: 30px;
+}
+
+.checkbox a:hover {
+  color: #59b586;
+}
+
+.checkbox__custom {
+  cursor: pointer;
+}
+
+.checkbox__custom--tick {
+  margin-right: 10px;
+}
+
+.checkbox__custom span {
+  vertical-align: 2px;
 }
 
 .header {
@@ -2827,4 +2872,35 @@ p {
 
 .w-comment__btn button {
   padding: 14px 70px;
+}
+
+.register {
+  padding-bottom: 80px;
+}
+
+.register__top {
+  margin-bottom: 50px;
+}
+
+.register__form {
+  width: 90%;
+}
+
+.register__columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+}
+
+@media (max-width: 991px) {
+  .register__columns {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+    grid-gap: 0;
+  }
+}
+
+.register__btn button {
+  margin: 0 20px 20px 0;
 }
