--- a/src/sass/pages/pageRegister/_register.scss
+++ b/src/sass/pages/pageRegister/_register.scss
@@ -3,9 +3,7 @@
     &__top {
         margin-bottom: 50px;
     }
-    &__form {
-        width: 90%;
-    }
+    
     &__columns {
         @include d-grid(1fr 1fr);
         @include res("md") {
@@ -16,6 +14,15 @@
     &__btn {
         button {
             margin: 0 20px 20px 0;
+        }
+    }
+    &__right {
+        h2 {
+            margin-bottom: 20px !important;
+        }
+        button {
+            margin-top: 30px;
+            display: block;
         }
     }
 
