--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -53,3 +53,5 @@
 @import "./pages/pageBlogDetails/blog-details";
 //PageRegister
 @import "./pages/pageRegister/register";
+//PageRegister
+@import "./pages/pageLogin/pageLogin.scss";
