--- a/src/sass/components/_checkbox.scss
+++ b/src/sass/components/_checkbox.scss
@@ -1,5 +1,6 @@
 .checkbox {
     margin-top: 20px;
+    margin-bottom: 20px;
     outline: none;
     a {
         font-size: 12px;
@@ -7,6 +8,8 @@
         color: #898989;
         border-bottom: 1px solid currentColor;
         margin-left: 30px;
+        vertical-align: 2px;
+        cursor: pointer;
         &:hover {
           color: $cl_m;
         }
