--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -55,3 +55,5 @@
 @import "./pages/pageRegister/register";
 //PageRegister
 @import "./pages/pageLogin/pageLogin.scss";
+//PageContact
+@import "./pages/pageContact/contact";
