PagePopup and fix header and footer

--- a/src/pug/partials/footer.pug
+++ b/src/pug/partials/footer.pug
@@ -15,8 +15,7 @@ footer.footer
                         a(href='#')
                             i.fab.fa-vimeo
                 .widget__intro
-                    .widget__intro--signin Đăng ký nhận 
-                    .widget__intro--email email từ chúng tôi
+                    .widget__intro--email đăng ký nhận email từ chúng tôi
                 .widget__search
                     form(action='#' method='post' class='widget__search--subcribe')
                         input(type='text' name='email')
