--- a/src/sass/components/_product-grid.scss
+++ b/src/sass/components/_product-grid.scss
@@ -6,6 +6,7 @@
         }
         &:hover .product-grid__img .product-grid__link a {
             opacity: 1;
+            visibility: visible;
             transform: scale(1);
         }
     }
@@ -53,6 +54,7 @@
         a {
             margin: 0 5px;
             opacity: 0;
+            visibility: hidden;
             transform: scale(0.5);
         }
         &--buynow {
