--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -19,6 +19,8 @@
         }
     }
     &__search{
+        width: 105%;
+        margin-left: 50px;
         .fas{
             padding-left: 30px;   
         }
