--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -57,3 +57,5 @@
 @import "./pages/pageLogin/pageLogin.scss";
 //PageContact
 @import "./pages/pageContact/contact";
+//PageContact
+@import "./pages/pagePopup/popup";
