--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -433,6 +433,7 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
 
 .product-grid__box:hover .product-grid__img .product-grid__link a {
   opacity: 1;
+  visibility: visible;
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
@@ -480,6 +481,7 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
 .product-grid__link a {
   margin: 0 5px;
   opacity: 0;
+  visibility: hidden;
   -webkit-transform: scale(0.5);
   -ms-transform: scale(0.5);
   transform: scale(0.5);
@@ -1230,6 +1232,11 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
   }
 }
 
+.header__search {
+  width: 105%;
+  margin-left: 50px;
+}
+
 .header__search .fas {
   padding-left: 30px;
 }
@@ -1320,14 +1327,14 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
 @media (max-width: 767px) {
   .widget__first {
     color: #59b586;
-    position: relative;
   }
 }
 
 .widget__first--wrap {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1.5fr 1fr 2fr;
   grid-gap: 30px;
+  grid-gap: 15px !important;
 }
 
 @media (max-width: 991px) {
@@ -1344,31 +1351,20 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
   font-weight: 700;
 }
 
-@media (max-width: 767px) {
-  .widget__intro {
-    font-size: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: 25px;
-  }
-}
-
 .widget__intro p {
   margin-bottom: 0.5rem;
 }
 
 @media (max-width: 991px) {
   .widget__intro p {
-    font-size: 20px;
+    font-size: 18px;
+    text-align: left;
   }
 }
 
 @media (max-width: 767px) {
   .widget__intro--social {
-    position: relative;
-    bottom: -14px;
-    left: -330px;
+    text-align: left;
     margin-top: 15px;
   }
 }
@@ -1392,26 +1388,31 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
   }
 }
 
-.widget__intro--signin {
-  margin-bottom: 0.5rem;
+.widget__intro--email {
+  margin-top: 15px;
+  width: 150px;
 }
 
 @media (max-width: 767px) {
-  .widget__intro--signin {
+  .widget__intro--email {
     margin-right: 5px;
+    width: 100%;
+    font-size: 18px;
+    text-align: left;
   }
 }
 
 .widget__search {
-  position: relative;
-  left: -140px;
-  width: 100%;
   font-size: 300px !important;
+  position: relative;
+  margin-top: 10px;
 }
 
 @media (max-width: 991px) {
   .widget__search {
-    width: 640px;
+    width: auto;
+    text-align: center;
+    margin-top: 0;
   }
 }
 
@@ -1482,6 +1483,12 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
 
 .widget__detail--des {
   margin: 1rem 0;
+}
+
+@media (max-width: 575px) {
+  .widget__detail--contact {
+    display: none;
+  }
 }
 
 .widget__detail--contact .icon__footer--mobile {
@@ -1729,14 +1736,26 @@ input[id="slide-dot3"]:checked ~ .slider__inner label[for="slide-dot3"] {
   display: flex;
 }
 
-.topbar__right--signin {
-  margin-right: 10px;
+.topbar__right--signin i {
+  padding: 8px 10px;
+  border-left: 1px solid #2b2b2b;
+}
+
+.topbar__right--signin i:last-child {
+  padding: 8px 0 !important;
+  border: none;
 }
 
 .topbar__right a {
   font-size: 12px;
   color: #898989;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
   padding: 8px 10px;
+}
+
+.topbar__right a:last-child {
+  border-right: 1px solid #2b2b2b;
 }
 
 .topbar__right a:hover {
@@ -2987,4 +3006,107 @@ p {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
+}
+
+.popup__form {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.popup__form input {
+  height: 45px;
+  padding: 0 58px 0 15px;
+}
+
+.popup__form button {
+  top: 1px;
+  right: 1px;
+  padding: 13px 14px;
+  position: absolute;
+}
+
+.popup__background {
+  width: 100%;
+  max-width: 800px;
+  position: absolute;
+  padding: 30px 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  top: 3%;
+  left: 50%;
+  background-color: #f1eeeb;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+@media (max-width: 991px) {
+  .popup__background {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 767px) {
+  .popup__background {
+    display: unset;
+    -webkit-box-pack: unset;
+    -ms-flex-pack: unset;
+    justify-content: unset;
+  }
+}
+
+@media (max-width: 575px) {
+  .popup__background {
+    padding: 30px 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .popup__img {
+    text-align: center;
+  }
+}
+
+.popup__content--title {
+  font-size: 23px;
+  font-weight: 700;
+  line-height: 2;
+  margin-bottom: 15px;
+  color: #59b586;
+  text-transform: uppercase;
+}
+
+.popup__content p {
+  margin-bottom: 15px;
+}
+
+.popup__close {
+  top: 10px;
+  right: 10px;
+  position: absolute;
+  cursor: pointer;
+}
+
+.popup__close i {
+  color: #59b586;
+  font-size: 20px;
 }
